[gd_scene load_steps=2 format=3 uid="uid://c8v7knbihqi4u"]

[ext_resource type="Script" path="res://settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_settings")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
theme_override_constants/separation = 20

[node name="MasterVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 40)

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="VBoxContainer/MasterVolumeContainer"]
custom_minimum_size = Vector2(250, 0)
max_value = 1.0
step = 0.01
value = 1.0

[node name="SoundEffectsContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 40)

[node name="SoundEffectsLabel" type="Label" parent="VBoxContainer/SoundEffectsContainer"]
custom_minimum_size = Vector2(150, 0)
text = "Sound Effects:"

[node name="SoundEffectsSlider" type="HSlider" parent="VBoxContainer/SoundEffectsContainer"]
custom_minimum_size = Vector2(250, 0)
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 40)

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(150, 0)
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(250, 0)
max_value = 1.0
step = 0.01
value = 1.0

[node name="SoundEffectsToggle" type="CheckBox" parent="VBoxContainer"]
button_pressed = true
text = "Sound Effects Enabled"

[node name="MusicToggle" type="CheckBox" parent="VBoxContainer"]
button_pressed = true
text = "Music Enabled"

[node name="DebugInfoToggle" type="CheckBox" parent="VBoxContainer"]
text = "Show Debug Info"

[node name="ResetButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
text = "Reset to Defaults"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
text = "Back"